--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "client": "npm run start --prefix ../client",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
-  "proxy": "http://localhost:4000",
+  "proxy": "http://localhost:3000/",
   "keywords": [],
   "author": "",
   "license": "ISC",
