--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "socket-io": "^1.0.0",
     "socket.io": "^4.5.4"
   }
 }
